--- a/beach50/public/index.html
+++ b/beach50/public/index.html
@@ -49,7 +49,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
       <link
-         rel="manifest"
+         rel="/manifest"
          href="./favicon/site.webmanifest"
       />
       <!--
